--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -92,23 +92,26 @@
     <!-- Example settings for Data & pref_title_language_default_valueSync -->
     <string name="pref_header_data_sync">Images &amp; Videos</string>
 
-    <string name="pref_title_sync_frequency">Sync frequency</string>
+    <string name="pref_title_sync_frequency">Image Quality</string>
     <string-array name="pref_sync_frequency_titles">
-        <item>15 minutes</item>
-        <item>30 minutes</item>
-        <item>1 hour</item>
-        <item>3 hours</item>
-        <item>6 hours</item>
-        <item>Never</item>
+        <item>Default</item>
+        <item>Very Low</item>
+        <item>Low</item>
+        <item>Medium</item>
+        <item>High</item>
+        <item>Very High</item>
+        <item>Original</item>
     </string-array>
     <string-array name="pref_sync_frequency_values">
-        <item>15</item>
-        <item>30</item>
-        <item>60</item>
-        <item>180</item>
-        <item>360</item>
-        <item>-1</item>
+        <item>w342/</item>
+        <item>w154/</item>
+        <item>w185/</item>
+        <item>w342/</item>
+        <item>w500/</item>
+        <item>w780/</item>
+        <item>original/</item>
     </string-array>
+    <string name="pref_image_default_value">w342/</string>
 
     <string-array name="list_preference_entries">
         <item>Entry 1</item>
